<resources>
    <string name="app_name">MarvelHeroes</string>
    <string name="character_description">Descrição</string>
    <string name="character_name">Nome Personagem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_title_menu">Personagens</string>
    <string name="character_detail_title_menu">Detalhes</string>
    <string name="char_img_desc">Imagem de personagem Marvel</string>
    <string name="nome_hint">Nome</string>
    <string name="description_hint">Descrição</string>
    <string name="salvar_btn_txt">salvar</string>
    <string name="url_img_txt">Digite url da imagem</string>
    <string name="baixar_imagem_txt">baixar imagem</string>
    <string name="inser_url_txt">Insira URL de imagem</string>
    <string name="http_txt">http://</string>
    <string name="favorite_heart">Coração para favoritar filme</string>
    <string name="description_txt">Descrição exemplo</string>
    <string name="name_character">Nome Personagem</string>
    <string name="img_character_txt">Imagem de personagem Marvel</string>
    <string name="main_title">Marvel Heroes</string>
</resources>