<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.characteradd.view.CharacterAddFragment"
    android:layout_margin="@dimen/margin_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivMarvelLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_marvel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvInsertUrl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ivMarvelLogo"
            android:layout_margin="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/inser_url_txt"
            android:textSize="@dimen/textsize_20" />

        <EditText
            android:id="@+id/etImageHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvInsertUrl"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/http_txt"
            android:inputType="textUri"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/etCharacterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_hint"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etImageHere" />

        <EditText
            android:id="@+id/etCharacterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@id/etCharacterName"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_btn_txt"
            android:layout_margin="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/etCharacterDescription"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>